fixed contrast errors

--- a/project7/project_styles.css
+++ b/project7/project_styles.css
@@ -1,6 +1,6 @@
 /* Navigation */
 nav {background-color: #FFA630; padding : 10px;} 
-nav a {color: #0474BA ; padding: 10px;} 
+nav a {color: #1B2A41 ; padding: 10px;} 
 nav a:hover {background-color: #00A7E1 ;} 
  
 /*Footer*/
